<resources>
    <string name="app_name">校园考勤系统</string>
    <string name="contentDescription">TODO</string>
    <string name="account_prompt">请输入账号</string>
    <string name="password_prompt">请输入密码</string>
    <string name="user_type">用户角色：</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">没有账号？</string>
    <string name="wait_message">请求执行中，请等待</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_register_avatar">头像：</string>
    <string name="confirm">验证</string>
    <string name="confirm_prompt">请将发送的验证码填写在下方的输入框进行手机号验证（验证码有效期为十五分钟，如未收到验证码可在一分钟后重新发送）</string>
    <string name="confirm_code">验证码：</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="menu_record_result">
        <item>缺 勤</item>
        <item>请 假</item>
        <item>成 功</item>
    </string-array>

    <string-array name="menu_attend_type">
        <item>GPS</item>
        <item>人脸识别+GPS</item>
        <item>手势签到+GPS</item>
    </string-array>
</resources>